--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   app:
     container_name: shiori-app
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: /bin/bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     env_file: .env
     volumes:
       - .:/shiori:delegated
