webpakerの設定を修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
             bundle exec rake db:create db:schema:load --trace
       - run:
           name: Compile webpacker assets
-          command: RAILS_MASTER_KEY=${RAILS_MASTER_KEY} rails webpacker:compile
+          command: RAILS_MASTER_KEY=${RAILS_MASTER_KEY} bundle exec rake webpacker:compile
       # run tests!
       - run:
           name: Run rspec
