--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,18 +35,18 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-yarn-{{ checksum "Gemfile.lock" }}
-      # - restore_cache:
-      #     keys:
-      #     - v1-yarn-{{ checksum "yarn.lock" }}
-      #     # fallback to using the latest cache if no exact match is found
-      #     - v1-yarn-
-      # - run:
-      #     name: yarn install
-      #     command: yarn install
-      # - save_cache:
-      #     paths:
-      #       - .yarn-cache
-      #     key: v1-yarn-{{ checksum "yarn.lock" }}
+      - restore_cache:
+          keys:
+          - v1-yarn-{{ checksum "yarn.lock" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-yarn-
+      - run:
+          name: yarn install
+          command: yarn install
+      - save_cache:
+          paths:
+            - .yarn-cache
+          key: v1-yarn-{{ checksum "yarn.lock" }}
       # Database setup
       - run: rm ./config/database.yml
       - run: mv ./config/database.yml.ci ./config/database.yml
