--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,10 @@ jobs:
       - run:
           name: Compile webpacker assets
           command: RAILS_MASTER_KEY=${RAILS_MASTER_KEY} bundle exec rake webpacker:compile
+      # Rubocop
+      - run:
+          name: Rubocop
+          command: bundle exec rubocop
       # run tests!
       - run:
           name: Run rspec
