--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -14,7 +14,5 @@ ADD . /shiori
 RUN bundle install
 ENV RAILS_ENV production
 ARG ARG_RAILS_MASTER_KEY
-RUN RAILS_ENV=production \
-    RAILS_MASTER_KEY=$ARG_RAILS_MASTER_KEY \
-    bundle exec rake webpacker:compile
+RUN RAILS_ENV=production RAILS_MASTER_KEY=$ARG_RAILS_MASTER_KEY bundle exec rake webpacker:compile
 CMD bundle exec puma
