--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -15,5 +15,8 @@ RUN bundle install
 ENV RAILS_ENV production
 ARG ARG_RAILS_MASTER_KEY
 ARG ARG_MYSQL_PASSWORD
-RUN RAILS_ENV=production RAILS_MASTER_KEY=$ARG_RAILS_MASTER_KEY MYSQL_PASSWORD=$ARG_MYSQL_PASSWORD bundle exec rake assets:precompile
+RUN RAILS_ENV=production \
+    RAILS_MASTER_KEY=$ARG_RAILS_MASTER_KEY \
+    MYSQL_PASSWORD=$ARG_MYSQL_PASSWORD \
+    bundle exec rake assets:precompile
 CMD bundle exec puma
