CircleCIからの自動ローリングアップデート設定を追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,13 +111,13 @@ workflows:
           path: './containers/nginx'
           tag: 'latest,${CIRCLE_SHA1}'
 
-      # - aws-ecs/deploy-service-update:
-      #     requires:
-      #       - aws-ecr-build-and-push-image-app
-      #       - aws-ecr-build-and-push-image-web
-      #     family: 'shiori'
-      #     cluster-name: 'shiori-cluster'
-      #     service-name: 'shiori-service'
-      #     container-image-name-updates: >
-      #       container=shiori-app,image-and-tag=${AWS_ECR_ACCOUNT_URL}/shiori-product/app:${CIRCLE_SHA1},
-      #       container=shiori-web,image-and-tag=${AWS_ECR_ACCOUNT_URL}/shiori-product/web:${CIRCLE_SHA1}
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr-build-and-push-image-app
+            - aws-ecr-build-and-push-image-web
+          family: 'shiori'
+          cluster-name: 'shiori-staging-cluster'
+          service-name: 'shiori-staging-service'
+          container-image-name-updates: >
+            container=shiori-app,image-and-tag=${AWS_ECR_ACCOUNT_URL}/shiori-product/app:${CIRCLE_SHA1},
+            container=shiori-web,image-and-tag=${AWS_ECR_ACCOUNT_URL}/shiori-product/web:${CIRCLE_SHA1}
