circleCIの設定をprod仕様に変更

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ workflows:
           name: aws-ecr-build-and-push-image-app
           requires:
             - test
-          repo: "${AWS_RESOURCE_NAME_PREFIX}/app"
+          repo: "${AWS_RESOURCE_NAME_PREFIX}-prod/app"
           dockerfile: 'Dockerfile.prod'
           extra-build-args: >-
             --build-arg ARG_RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
@@ -106,18 +106,18 @@ workflows:
           name: aws-ecr-build-and-push-image-web
           requires:
             - test
-          repo: "${AWS_RESOURCE_NAME_PREFIX}/web"
+          repo: "${AWS_RESOURCE_NAME_PREFIX}-prod/web"
           dockerfile: 'Dockerfile'
           path: './containers/nginx'
           tag: 'latest,${CIRCLE_SHA1}'
 
-      - aws-ecs/deploy-service-update:
-          requires:
-            - aws-ecr-build-and-push-image-app
-            - aws-ecr-build-and-push-image-web
-          family: 'shiori-staging-task'
-          cluster-name: 'shiori-staging-cluster'
-          service-name: 'shiori-staging-service'
-          container-image-name-updates: >
-            container=shiori-app,image-and-tag=${AWS_ECR_ACCOUNT_URL}/shiori-staging/app:${CIRCLE_SHA1},
-            container=shiori-web,image-and-tag=${AWS_ECR_ACCOUNT_URL}/shiori-staging/web:${CIRCLE_SHA1}
+      # - aws-ecs/deploy-service-update:
+      #     requires:
+      #       - aws-ecr-build-and-push-image-app
+      #       - aws-ecr-build-and-push-image-web
+      #     family: 'shiori-staging-task'
+      #     cluster-name: 'shiori-staging-cluster'
+      #     service-name: 'shiori-staging-service'
+      #     container-image-name-updates: >
+      #       container=shiori-app,image-and-tag=${AWS_ECR_ACCOUNT_URL}/shiori-staging/app:${CIRCLE_SHA1},
+      #       container=shiori-web,image-and-tag=${AWS_ECR_ACCOUNT_URL}/shiori-staging/web:${CIRCLE_SHA1}
