youtubeから動画情報を取得する機能を実装

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -109,10 +109,12 @@ Style/SymbolArray:
   Enabled: false
 
 Metrics/MethodLength:
+  Max: 15
   Exclude:
     - 'db/migrate/*'
 
 Metrics/AbcSize:
+  Max: 20
   Exclude:
     - 'db/migrate/*'
 
