ゲストユーザー機能を実装

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -108,6 +108,9 @@ Style/RedundantFileExtensionInRequire:
 Style/SymbolArray:
   Enabled: false
 
+Style/ClassAndModuleChildren:
+  Enabled: false
+
 Metrics/MethodLength:
   Max: 15
   Exclude:
