--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -7,6 +7,7 @@ upstream shiori {
 server {
   listen 80;
   server_name localhost;
+  client_max_body_size 20M;
 
   # ~2 seconds is often enough for most folks to parse HTML/CSS and
   # retrieve needed images/icons/frames, connections are cheap in
