--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,8 @@
 build:
   docker:
     web: Dockerfile.prod
+release:
+  command:
+    - bundle rails db:migrate
 run:
   web: bundle exec puma -C config/puma.rb
