--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,9 +3,7 @@ ENV RUBYOPT -EUTF-8
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
     && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
     && apt-get update -qq \
-    && apt-get install -y nodejs yarn \
-    && yarn install --check-files
-
+    && apt-get install -y nodejs yarn
 
 RUN mkdir /shiori
 WORKDIR /shiori
