--- a/config/database.yml
+++ b/config/database.yml
@@ -53,3 +53,4 @@ production:
   database: shiori_production
   username: shiori
   host: <%= ENV['DATABASE_HOST'] %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
