--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,7 @@ test:
 production:
   <<: *default
   adapter: postgresql
+  encoding: unicode
   database: shiori_production
   username: shiori
   host: <%= ENV['DATABASE_HOST'] %>
