Dockerfile.prodにassets:precompileを追加

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -13,3 +13,10 @@ COPY . /shiori
 RUN mkdir -p tmp/sockets
 
 RUN bundle install
+ENV RAILS_ENV production
+ARG ARG_RAILS_MASTER_KEY
+ARG DATABASE_PASSWORD
+RUN RAILS_ENV=production \
+    RAILS_MASTER_KEY=$ARG_RAILS_MASTER_KEY \
+    MYSQL_PASSWORD=$DATABASE_PASSWORD \
+    bundle exec rake assets:precompile
