--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -18,5 +18,5 @@ ARG ARG_RAILS_MASTER_KEY
 ARG DATABASE_PASSWORD
 RUN RAILS_ENV=production \
     RAILS_MASTER_KEY=$ARG_RAILS_MASTER_KEY \
-    MYSQL_PASSWORD=$DATABASE_PASSWORD \
+    DATABASE_PASSWORD=$DATABASE_PASSWORD \
     bundle exec rake assets:precompile
