--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -16,6 +16,9 @@ RUN touch test.txt
 RUN bundle install
 ARG ARG_RAILS_MASTER_KEY
 ARG DATABASE_PASSWORD
+
+RUN echo 'echo test'
+RUN echo $ARG_RAILS_MASTER_KEY
 RUN RAILS_ENV=production \
     RAILS_MASTER_KEY=$ARG_RAILS_MASTER_KEY \
     DATABASE_PASSWORD=$DATABASE_PASSWORD \
