--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -15,11 +15,14 @@ RUN touch test.txt
 
 RUN bundle install
 ARG ARG_RAILS_MASTER_KEY
-ARG DATABASE_PASSWORD
+ARG ARG_DATABASE_PASSWORD
 
 RUN echo 'echo test'
 RUN echo $ARG_RAILS_MASTER_KEY
 RUN RAILS_ENV=production \
     RAILS_MASTER_KEY=$ARG_RAILS_MASTER_KEY \
-    DATABASE_PASSWORD=$DATABASE_PASSWORD \
+    DATABASE_PASSWORD=$ARG_DATABASE_PASSWORD \
+    MYSQL_PASSWORD=$ARG_DATABASE_PASSWORD \
     bundle exec rake assets:precompile
+
+CMD bundle exec puma -C config/puma.rb
