--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
 
   app:
     container_name: shiori-app
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     command: /bin/bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     env_file: .env
     volumes:
