--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
       - image: circleci/ruby:2.6.6-node-browsers
         environment:
           RAILS_ENV: test
-          MYSQL_HOST: 127.0.0.1
-          MYSQL_USERNAME: 'root'
-          MYSQL_PASSWORD: ''
-          MYSQL_PORT: 3306
+          DATABASE_HOST: 127.0.0.1
+          DATABASE_USER: 'root'
+          DATABASE_PASSWORD: ''
+          DATABASE_PORT: 3306
       - image: circleci/mysql:8.0.18-ram
         command: |
           mysqld --default-authentication-plugin=mysql_native_password
