fixes #126 オーバーレイ以外のchrome拡張を実装する

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -126,8 +126,7 @@ Metrics/AbcSize:
     - 'db/migrate/*'
 
 Metrics/BlockLength:
-  Exclude:
-    - 'spec/**/*'
+  Enabled: false
 
 Style/AsciiComments:
   Enabled: false
