--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,16 @@ version: '3'
 services:
   db:
     container_name: shiori-db
-    image: mysql:8.0.20
-    command: "--default-authentication-plugin=mysql_native_password"
+    image: postgres:13.5
     environment:
-      - MYSQL_ROOT_PASSWORD=password
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
     ports:
-      - '3316:3306'
+      - '5432:5432'
     volumes:
-      - ./db/mysql/volumes:/var/lib/mysql:delegated
-      - ./db/mysql/mysql-conf.d:/etc/mysql/my.cnf
+      - ./db/postgres/data:/var/lib/postgresql/data:delegated
+    user: root
 
   app:
     container_name: shiori-app
