fixes #117 登録順ソートを実装する

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -39,8 +39,7 @@ Layout/SpaceAroundMethodCallOperator:
   Enabled: true
 
 Layout/LineLength:
-  Exclude:
-    - 'config/initializers/devise.rb'
+  Enabled: false
 
 Lint/DeprecatedOpenSSLConstant:
   Enabled: true
